--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,4 @@
 steps:
-  - name: 'gcr.io/cloud-builders/kubectl'
-    args: ['apply', '-f', 'deployment.yaml']
-    env:
-      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
-      - 'CLOUDSDK_CONTAINER_CLUSTER=tu-cluster'
+  - name: 'ubuntu'
+    entrypoint: 'bash'
+    args: ['-c', 'ls -l']
