--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
   - name: 'ubuntu'
     entrypoint: 'bash'
-    args: ['-c', 'ls -l']
+    args: ['-c', 'sh up.sh']
 options:
   logging: CLOUD_LOGGING_ONLY
