--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,5 +2,8 @@ steps:
   - name: 'ubuntu'
     entrypoint: 'bash'
     args: ['-c', 'sh up.sh']
+    # Paso 2: Subir el WAR generado al bucket
+  - name: 'gcr.io/cloud-builders/gsutil'
+    args: ['cp', 'target/app.war', 'gs://maximal-relic-war-artifacts-k6/app.war']
 options:
   logging: CLOUD_LOGGING_ONLY
