--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   - name: 'ubuntu'
     entrypoint: 'bash'
-    args: ['-c', 'sh up.sh']
+    args: ['-c', 'sh upgbuild.sh']
     # Paso 2: Subir el WAR generado al bucket
   - name: 'gcr.io/cloud-builders/gsutil'
     args: ['cp', 'target/TaskManager.war', 'gs://maximal-relic-war-artifacts-k6/TaskManager.war']
