--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,3 +2,5 @@ steps:
   - name: 'maven:3.8.6-jdk-17'
     entrypoint: 'mvn'
     args: ['clean', 'install']
+options:
+  logging: CLOUD_LOGGING_ONLY
