--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,7 @@
 steps:
-  - name: 'maven:3.8.6-jdk-17'
+  - name: 'maven:3.8-eclipse-temurin-17'
     entrypoint: 'mvn'
     args: ['clean', 'install']
 options:
   logging: CLOUD_LOGGING_ONLY
+
