--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  - name: 'maven:3.8-eclipse-temurin-17'
+  - name: 'maven:3.6.3-jdk-8'
     entrypoint: 'mvn'
     args: ['clean', 'install']
 options:
