--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,10 @@ steps:
     args: ['clean', 'install']
   - name: 'ubuntu'
     entrypoint: 'bash'
-    args: ['-c', 'ls -lh target']    
+    args: ['-c', 'ls -lh target']
+    # Paso 3: Subir el WAR generado al bucket
+  - name: 'gcr.io/cloud-builders/gsutil'
+    args: ['cp', 'target/TaskManager.war', 'gs://maximal-relic-war-artifacts-k6/TaskManager.war']    
 options:
   logging: CLOUD_LOGGING_ONLY
 
