--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
     args: ['clean', 'install']
   - name: 'ubuntu'
     entrypoint: 'bash'
-    args: ['-c', 'ls -lh src/main/java/com/softtek/util/DatabaseConnection.java']
+    args: ['-c', 'cat src/main/java/com/softtek/util/DatabaseConnection.java']
     # Paso 3: Subir el WAR generado al bucket
   - name: 'gcr.io/cloud-builders/gsutil'
     args: ['cp', 'target/TaskManager.war', 'gs://maximal-relic-war-artifacts-k6/TaskManagerKS.war']    
