Update pipeline Prueba1

--- a/.harness/orgs/default/projects/default_project/pipelines/Prueba1.yaml
+++ b/.harness/orgs/default/projects/default_project/pipelines/Prueba1.yaml
@@ -36,5 +36,5 @@ pipeline:
                   spec:
                     shell: Sh
                     command: |
-                      echo "Contenido del workspace:"
-                      ls
+                      echo "Ejecutando en pool de Harness"
+                      ls -la
